# Scratchattach

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.example.toml  gui.py  main.py  pyproject.toml  requirements.txt  run-logout.sh  run.setup.sh  run.sh  setup_py2app.py  tox.ini
.github/workflows/: build-mac.yml  build-msi.yml  ci.yml
installer/: build-msi.ps1  installer.wxs
installer/macos/: build-app-and-dmg.sh  build-dmg.sh
tests/: test_import.py
